kube/common/doctr/doctr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctr
  labels:
    app.kubernetes.io/name: doctr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: doctr
  template:
    metadata:
    
      labels:
        app.kubernetes.io/name: doctr
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - doctr
              topologyKey: "kubernetes.io/hostname"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: doctr
        image: luminainc/doctr:07c654a8 
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 5Gi
