kube/common/doctr/doctr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctr-service
  labels:
    app.kubernetes.io/name: doctr
spec:
  selector:
    app.kubernetes.io/name: doctr
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
