kube/common/doctr/doctr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doctr-ingress
  namespace: chunkmydocs
  labels:
    app: doctr
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: doctr-service
            port:
              number: 8000
